tests/baselines/reference/es6ImportNamedImportNoNamedExports.errors.txt
es6ImportNamedImportNoNamedExports_1.ts(1,10): error TS2616: 'a' can only be imported by using 'import a = require("./es6ImportNamedImportNoNamedExports_0")' or a default import.
es6ImportNamedImportNoNamedExports_1.ts(2,10): error TS2616: 'a' can only be imported by using 'import a = require("./es6ImportNamedImportNoNamedExports_0")' or a default import.


==== es6ImportNamedImportNoNamedExports_0.ts (0 errors) ====
    var a = 10;
    export = a;
    
==== es6ImportNamedImportNoNamedExports_1.ts (2 errors) ====
    import { a } from "./es6ImportNamedImportNoNamedExports_0";
             ~
!!! error TS2616: 'a' can only be imported by using 'import a = require("./es6ImportNamedImportNoNamedExports_0")' or a default import.
    import { a as x } from "./es6ImportNamedImportNoNamedExports_0";
             ~
!!! error TS2616: 'a' can only be imported by using 'import a = require("./es6ImportNamedImportNoNamedExports_0")' or a default import.